--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -21,26 +21,32 @@
         @apply font-sans font-semibold;
     }
 
-    p {
-        @apply my-2;
-    }
-
-    ul,
-    ol {
-        @apply px-4
-    }
-
-    ul li {
-        @apply list-decimal;
-    }
-
-    ol li {
-        @apply list-disc ml-4;
-    }
-
     article {
-        div{@apply my-3}
-        h2,h3,h4,h5{@apply py-2}
+        p {
+            @apply my-2;
+        }
+
+        ul,
+        ol {
+            @apply px-4
+        }
+
+        ul li {
+            @apply list-decimal;
+        }
+
+        ol li {
+            @apply list-disc ml-4;
+        }
+
+        div {
+            @apply my-3
+        }
+
+        h2, h3, h4, h5 {
+            @apply py-2
+        }
+
         h2 {
             @apply text-2xl;
         }
@@ -53,15 +59,16 @@
             @apply text-lg
         }
 
-        a{
+        a {
             @apply text-sky-600 hover:text-sky-400 hover:underline transition-colors;
         }
 
-        table{
-            tr:nth-child(even){
+        table {
+            tr:nth-child(even) {
                 @apply bg-gray-200;
             }
         }
+
         #rank-math-toc {
             @apply p-5 bg-gray-100 rounded-md shadow-md;
 
